# rabbitmq-mailpit-example

./: .env  docker-compose.yml  pyproject.toml
app/: main.py
app/consumer/: consumer.py  verification_email.py
app/core/: config.py
app/producer/: producer.py
app/schemas/: email_verifiation.py
app/templates/: verification_email.html
app/utils/: constants.py  mail.py
